test/myapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.service.nodeport.port: "30001"
    kompose.service.type: nodeport
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: myapp
  name: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: myapp
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.service.nodeport.port: "30001"
        kompose.service.type: nodeport
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/test-clarusnet: "true"
        io.kompose.service: myapp
    spec:
      containers:
        - image: olivercw/bookstoreapi:latest
          name: myapp
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
