test/myapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.service.nodeport.port: "30001"
    kompose.service.type: nodeport
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: myapp
  name: myapp
spec:
  ports:
    - name: "80"
      nodePort: 30001
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: myapp
  type: NodePort
status:
  loadBalancer: {}
