test/test-clarusnet-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: test-clarusnet
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/test-clarusnet: "true"
  podSelector:
    matchLabels:
      io.kompose.network/test-clarusnet: "true"
